src/objects/Inheritance_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_1__c</fullName>
        <label>Record Type 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_2__c</fullName>
        <label>Record Type 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inheritance Setting</label>
    <pluralLabel>Inheritance Settings</pluralLabel>
</CustomObject>